syntax = "proto3";

package farmera.files;

option go_package = "github.com/farmera/grpc-protos/files";

service FileService {
    rpc UploadImage(stream UploadImageRequest) returns (UploadImageResponse); 
}

enum UploadStatusCode {
    STATUS_UNSPECIFIED = 0;
    OK = 1;
    FAILED = 2;
}

message UploadImageRequest{
    oneof test_oneof {
        Metadata meta = 2;
        bytes image = 1;
    }
}

message Metadata{
    string file_name = 1;
    string file_type = 2;
    int64 total_size = 3;
    // other metadata
}

message UploadImageResponse {
    string message = 1;
    UploadStatusCode code = 2;
}